--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@camwiegert/typical": "^0.1.1",
     "element-plus": "^2.7.5",
     "pinia": "^2.1.7",
     "vue": "^3.4.21",
