--- a/package.json
+++ b/package.json
@@ -13,7 +13,8 @@
     "element-plus": "^2.7.5",
     "pinia": "^2.1.7",
     "vue": "^3.4.21",
-    "vue-router": "^4.3.3"
+    "vue-router": "^4.3.3",
+    "vue3-seamless-scroll": "^2.0.1"
   },
   "devDependencies": {
     "@vitejs/plugin-vue": "^5.0.4",
