--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "element-plus": "^2.7.7",
     "pinia": "^2.1.7",
     "vue": "^3.4.21",
+    "vue-esign": "^1.1.4",
     "vue-router": "^4.3.3",
     "vue3-seamless-scroll": "^2.0.1"
   },
